public/stylesheets/styles.css
/* ... */
.l-h2p-tab-list::-webkit-scrollbar {
  width: 0.5rem;
}

.l-h2p-tab-list::-webkit-scrollbar-thumb {
  border: none;
}

.s-base--metro .l-h2p-tab-list::-webkit-scrollbar-thumb {
  border-radius: 0;
}

.o-h2p-tab-button {
  font-size: 1.25rem;
  cursor: pointer;
  border-bottom: 0.1rem solid black;
  padding: 0.3rem 0.5rem 0.3rem 0;
  transition: all 0.2s;
}

.o-h2p-tab-button:hover,
.o-h2p-tab-button--selected {
  box-shadow: inset 0 0 0.8rem var(--color-text);
}

.s-base--dark .o-h2p-tab-button {
  border-bottom: 0.1rem solid white;
}

.l-help-me {
  position: absolute;
  top: 1rem;
  width: 2rem;
  right: 2rem;
  height: 2rem;
  border-radius: 50%;
  line-height: 1.9rem;
  font-size: 1.5rem;
  cursor: pointer;
  font-weight: 500;
}

.l-information {
  top: 3.1rem;
}

.l-hide-modal-tab-container {
  margin: 0.5rem;
}

.l-hide-modal-subtab-container {
  display: flex;
  flex-wrap: wrap;
  width: 61rem;
  justify-content: center;
  position: relative;
}

.c-hide-modal-all-subtab-container {
  border-radius: 0.8rem;
  border: 0.1rem solid black;
  padding: 0.2rem;
  cursor: pointer;
}

.s-base--metro .c-hide-modal-all-subtab-container {
  border-radius: 0;
}

.s-base--metro .c-hide-modal-tab-button {
  border-radius: 0;
}

.c-hide-modal-tab-button {
  color: var(--color-text);
  background-color: var(--color-base);
  font: 1rem Typewriter, serif;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 3.4rem;
  width: 12rem;
  margin: 0.2rem;
  border: 0.1rem solid black;
  border-radius: 0.4rem;
  box-shadow: none;
  white-space: normal;
  font-weight: bold;
  cursor: pointer;
  transition-duration: 0.2s;
  padding: 0.3rem 1rem;
}

.c-hide-modal-tab-button:hover {
  color: var(--color-text-inverted);
  background-color: var(--color-good);
}

.c-hide-modal-button--active {
  opacity: 1;
}

.c-hide-modal-button--inactive {
  opacity: 0.6;
}

.c-hide-modal-button--always-visible {
  color: var(--color-text-inverted);
  background-color: var(--color-disabled);
  cursor: default;
}

.c-hide-modal-button--always-visible:hover {
  color: var(--color-text-inverted);
  background-color: var(--color-disabled);
}

.c-hide-modal-tab-button--infinity {
  color: var(--color-infinity);
  background: var(--color-prestige--accent);
  border-color: var(--color-infinity);
}

.c-hide-modal-tab-button--infinity:hover {
  color: var(--color-prestige--accent);
  background: var(--color-infinity);
}

.c-hide-modal-tab-button--eternity {
  color: var(--color-eternity);
  background: var(--color-prestige--accent);
  border-color: var(--color-eternity)
}

.c-hide-modal-tab-button--eternity:hover {
  color: var(--color-prestige--accent);
  background: var(--color-eternity);
}

.c-hide-modal-tab-button--reality {
  color: var(--color-reality);
  background: var(--color-prestige--accent);
  border-color: var(--color-reality);
}

.c-hide-modal-tab-button--reality:hover {
  color: var(--color-prestige--accent);
  background: var(--color-reality);
}

.c-hide-modal-tab-button--celestials {
  color: var(--color-celestials);
  background: var(--color-prestige--accent);
  border-color: var(--color-celestials);
}

.c-hide-modal-tab-button--celestials:hover {
  color: var(--color-prestige--accent);
  background: var(--color-celestials);
}

/* Prevent any themes overriding font awesome */
.fa, .far, .fas {
  font-family: "Font Awesome 6 Free" !important;
}

@keyframes opacity {
  0% { opacity: 0; }
  50% { opacity: 0.4; }
  100% { opacity: 0; }
}

.tutorial--glow {
  position: relative;
}

.tutorial--glow:after {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background: gold;
  animation: opacity 3s infinite;
  top: 0;
  left: 0;
  border-radius: inherit;
}

.o-celestial-nav__hoverable .tooltiptext { display: none; }
.o-celestial-nav__hoverable:hover .tooltiptext,
.o-celestial-nav__force-hover .tooltiptext { display: block; }

.c-celestial-nav__test-ring {
  fill: blue;
}

.c-celestial-nav__test-ring:hover {
  fill: red;
  stroke: black;
  stroke-width: 2;
}

.c-celestial-nav__test-complete {
  fill: #5151ec;
}

.c-celestial-nav__effarig {
  fill: #d13737;
}

.c-celestial-nav__test-incomplete {
  fill: #888;
}

.o-celestial-nav__symbol {
  text-anchor: middle;
  font-weight: bold;
  font-family: Font Awesome;
}

.o-celestial-nav__legend-arrow {
  stroke: #CCC;
  fill: none;
  stroke-linecap: butt;
  stroke-width: 2;
}

.o-celestial-nav__hoverable:hover .o-celestial-nav__legend-arrow {
  stroke: #FFF;
}

.o-celestial-nav__legend-outline {
  stroke: none;
  fill: none;
  stroke-linecap: butt;
  stroke-width: 2;
}

.o-celestial-nav__hoverable:hover .o-celestial-nav__legend-outline {
  stroke: #FFF;
}

.o-celestial-nav__node-overlay {
  stroke: transparent;
  fill: transparent;
  stroke-width: 12;
}

.o-celestial-nav__legend-text {
  fill: rgb(238, 135, 17);
  font-weight: bold;
  text-shadow: 0 0 0.1rem black, 0 0 0.1rem black, 0 0 0.1rem black;
}

.o-celestial-nav__hoverable:hover .o-celestial-nav__legend-text {
  fill: rgb(197, 112, 14);
}

.o-no-mouse {
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.tooltiptext {
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
}

.l-celestial-navigation {
  margin: auto;
  border: 2px solid black;
  border-radius: 5px;
  /* background: #1a1a1a; */
}

.c-autobuyer-buy-box {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 6.4rem;
  font-size: 1.5rem;
  border-radius: 0.5rem;
  border-width: 0.2rem;
  margin: 0.5rem;
  padding: 1rem;
  width: 90rem;
}

.t-s6 .c-autobuyer-buy-box,
.t-s10 .c-autobuyer-buy-box {
  border-width: 0.1rem;
}

.s-base--metro .c-autobuyer-buy-box,
.t-s6 .c-autobuyer-buy-box,
.t-s10 .c-autobuyer-buy-box {
  height: 6.2rem;
}
/* ... */

